# cuda-to-cpp

./: CMakeLists.txt  README.md  cudaMain.cu  cudaMain.h  func.cu  func.h  main.cpp
